<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forklift_bt</name>
  <version>0.0.0</version>
  <description>无人叉车行为树控制</description>
  <maintainer email="cache@todo.todo">cache</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_behavior_tree</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>